changes for including virtual threads in CoproProcessor - producer & consumer.